--- a/res/resource.qrc
+++ b/res/resource.qrc
@@ -3,9 +3,9 @@
     <qresource>
         <file>ShairportQt.png</file>
         <file>ShairportQt.ico</file>
-        <file>settings-16.bmp</file>
-        <file>exit-16.bmp</file>
-        <file>info-16.bmp</file>
+        <file>settings-16.ico</file>
+        <file>exit-16.ico</file>
+        <file>info-16.ico</file>
         <file>play.png</file>
         <file>pause.png</file>
         <file>skip_to_next.png</file>
